--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "openai": "^4.51.0",
     "react-router-dom": "^6.23.0",
     "tailwindcss": "^3.4.3"
   }
