--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movieflix-gpt",
+  "name": "movieflix-gemini",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "openai": "^4.51.0",
     "react-router-dom": "^6.23.0",
     "tailwindcss": "^3.4.3"
   }
